--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ env:
     - CI=true
     - GENERATE_REPORT=true
     - RAILS_ENV=test
+    - RAILS_SYSTEM_TESTING_SCREENSHOT=simple
 
 before_install:
   - sudo wget https://chromedriver.storage.googleapis.com/73.0.3683.68/chromedriver_linux64.zip
